external-crates/move/crates/move-compiler/tests/move_check/typing/assign_nested.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09002]: unused variable
   ┌─ tests/move_check/typing/assign_nested.move:10:13
   │
10 │         let x: u64;
   │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01009]: invalid assignment
   ┌─ tests/move_check/typing/assign_nested.move:14:19
   │
14 │         (_, x, _, s.f) = four();
   │                   ^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
